@@ -67,6 +67,7 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
     /** The actual download buttons instance.
      */
     private BTDownloadButtons _downloadButtons;
+	private SeedingFilter _seedingFilter;
 
     /**
      * Overriden to have different default values for tooltips.
@@ -172,15 +173,16 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
 		// don't show seeds (do the update only if you have to, otherwise it flickers)
 		else if (!showSeeds && TABLE.getRowSorter() == null) {
 			TableRowSorter<BTDownloadModel> sorter = new TableRowSorter<BTDownloadModel>();
-			sorter.setRowFilter(new SeedingFilter());
+			sorter.setRowFilter(_seedingFilter);
 			sorter.setModel(DATA_MODEL);
 			TABLE.setRowSorter(sorter);
 			changedSorter = true;
 			DATA_MODEL.refresh();
 		}
-
+		
 		// select those that were selected before if something changed.
 		if (changedSorter) {
+			//System.out.println("BTDownloadMediator.updateTableFilters() -> Changed sorter.");
 			for (int i = 0; i < selectedRows.length; i++) {
 				int index = selectedRows[i];
 
@@ -188,6 +190,8 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
 					TABLE.setSelectedRow(index);
 				}
 			}
+		} else {
+			//System.out.println("BTDownloadMediator.updateTableFilters() -> Didn't change sorter.");
 		}
 	}
 
@@ -206,6 +210,7 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
         super("DOWNLOAD_TABLE");
         GUIMediator.addRefreshListener(this);
         ThemeMediator.addThemeObserver(this);
+		_seedingFilter = new SeedingFilter();
     }
 
     /**
@@ -516,6 +521,15 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
         });
     }
 
+    public void openTorrentURI(final String uri, final String relativePath, final ActionListener postPartialDownloadAction) {
+        GUIMediator.safeInvokeLater(new Runnable() {
+            public void run() {
+                BTDownload downloader = new TorrentFetcherDownload(uri, relativePath, postPartialDownloadAction);
+                add(downloader);
+            }
+        });
+    }
+    
     public void openTorrentFileForSeed(final File torrentFile, final File saveDir) {
         GUIMediator.safeInvokeLater(new Runnable() {
             public void run() {
@@ -541,6 +555,7 @@ public final class BTDownloadMediator extends AbstractTableMediator<BTDownloadMo
         });
     }
 
+    
     public void openTorrentFile(final File torrentFile, final boolean partialDownload) {
         GUIMediator.safeInvokeLater(new Runnable() {
             public void run() {
