@@ -359,6 +359,9 @@ public final class TableLine extends AbstractDataLine<SearchResult> implements L
         case SearchTableColumns.TYPE_IDX:
             return getIcon();
         case SearchTableColumns.NAME_IDX:
+        	if (getSearchResult() instanceof LocalSearchResult) {
+        		return new ActionIconAndNameHolder(null, null, getFilenameNoExtension());
+        	}
             return new ActionIconAndNameHolder(getTreeIcon(), _downloadAction, getFilenameNoExtension());
         case SearchTableColumns.SIZE_IDX:
             return new SizeHolder(getSize());
